<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="DbInsertCommand" Id="{9de8bd5c-1e22-4de7-b35a-ce7dd7a2a582}">
    <Declaration><![CDATA[(*
データベースへのデータ登録コマンド.

データベースに追加するデータバッファの先頭データと、そのデータ連続個数、および、先頭データの時刻を格納する。
*)
TYPE DbInsertCommand :
STRUCT
	MeasurementName		: Tc2_System.T_MaxString;	// Measurement name of InfluxDB
	SchemaName			: Tc2_System.T_MaxString;	// Structure name for schema model.
	data_body 			: T_Arg; // T_Arg type of head data.
	chunk_size			: UDINT; // Number of series record data.
	cycle_time_100ns	: UDINT; // Recording interval time (in 100ns)
	start_time			: ULINT; // Time of head record.
	accumulated_amount	: REFERENCE TO UDINT;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>