<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <GVL Name="DBLibParam" Id="{56321c42-7c93-46e8-98ed-6ddc16ce704e}" ParameterList="True">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL CONSTANT
	COMMAND_QUEUE_BUFFER_SIZE :UDINT := 64; // Queue size for database insert command.
	DATA_BUFFER_SIZE	:UDINT := 50000; // Data buffer size
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>